<resources>
    <string name="app_name">WaterQualityEX</string>
    <string name="pic1_text">校园介绍</string>
    <string name="pic3_text">项目介绍</string>
    <string name="pic2_text">监测数据</string>
    <string name="home_content_title">浙江农林大学\nZHEJIANG A &amp; F UNIVERSITY</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item1">数据</string>
    <string name="item2">站点</string>
    <string name="item3">对照表</string>
    <string name="item1_next1">空气质量</string>
    <string name="item1_next2">常规参数</string>
    <string name="item1_next3">氨氮指数</string>
    <string name="item1_next4">生活建议</string>
    <string name="right_fragment_title">东湖水质数据</string>
    <string name="helping">\t\t\t研发团队来自浙江农林大学信息工程学院新型产业装备创新实验室，实验室目前共有教授1人，副教授4人，讲师3人，研究生本科生10余人，主要研究方向为智能检测技术及装备研发、生态环境监测技术及装备研发、农林产品大数据平台等，近年来研究成果获浙江省科技进步奖二等奖、浙江省高校科研成果奖二等奖、浙江省第十四届科技兴林奖一等奖、浙江省农业机械科学技术奖奖一等奖等奖项，并被中央电视台科教频道专题报道。团队共发表SCI/EI论文30余篇，申请国家发明专利10余项，软件著作权多项，开展社会服务200余次。形成了一支稳定的科学研究队伍。 </string>
</resources>
