<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.tom.waterqualityex.home.HomeFragment"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="51dp"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/logo"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/wushuigongzhi"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wushuigongzhi" />

    <ImageButton
        android:id="@+id/campus_map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:srcCompat="@mipmap/campus_map"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/logo"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintRight_toRightOf="@+id/logo"
        app:layout_constraintLeft_toLeftOf="@+id/home_pager"
        android:layout_marginLeft="61dp"
        android:layout_marginRight="50dp" />

    <ImageButton
        android:id="@+id/home_pager"
        android:layout_width="61dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:srcCompat="@mipmap/homepage"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="149dp"
        app:layout_constraintBottom_toBottomOf="@+id/campus_map"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/campus_map"
        android:layout_marginLeft="149dp" />

    <ImageButton
        android:id="@+id/wushuigongzhi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:srcCompat="@mipmap/wushui"
        app:layout_constraintRight_toLeftOf="@+id/helping"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/helping"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/helping"
        app:layout_constraintLeft_toRightOf="@+id/logo"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp" />

    <ImageButton
        android:id="@+id/helping"
        android:layout_width="61dp"
        android:layout_height="49dp"
        android:background="@color/transparent"
        app:srcCompat="@mipmap/helping"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="148dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="148dp" />

    <ImageButton
        android:id="@+id/introduce"
        android:layout_width="73dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:srcCompat="@mipmap/pic1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="174dp"
        app:layout_constraintBottom_toBottomOf="@+id/project"
        android:layout_marginTop="2dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/data"
        android:layout_marginLeft="174dp" />

    <ImageButton
        android:id="@+id/data"
        android:layout_width="73dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:srcCompat="@mipmap/pic2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="74dp"
        app:layout_constraintBottom_toBottomOf="@+id/project"
        android:layout_marginEnd="72dp"
        app:layout_constraintRight_toRightOf="@+id/pic2_text"
        android:layout_marginTop="3dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="3dp"
        app:layout_constraintTop_toTopOf="@+id/project"
        app:layout_constraintLeft_toRightOf="@+id/pic1_text"
        android:layout_marginLeft="74dp"
        android:layout_marginRight="72dp" />

    <ImageButton
        android:id="@+id/project"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:background="@color/transparent"
        app:srcCompat="@mipmap/pic3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintRight_toRightOf="@+id/pic3_text"
        android:layout_marginTop="127dp"
        app:layout_constraintTop_toBottomOf="@+id/wushuigongzhi"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/pic2_text"
        android:layout_marginLeft="66dp"
        android:layout_marginRight="71dp" />

    <TextView
        android:id="@+id/pic1_text"
        android:layout_width="59dp"
        android:layout_height="19dp"
        android:text="@string/pic1_text"
        android:textColor="@android:color/background_light"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/data"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/data"
        app:layout_constraintLeft_toRightOf="@+id/introduce"
        android:layout_marginLeft="14dp" />

    <TextView
        android:id="@+id/pic2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic2_text"
        android:textColor="@android:color/background_light"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="26dp"
        android:layout_marginTop="11dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/data"
        android:layout_marginLeft="26dp" />

    <TextView
        android:id="@+id/pic3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic3_text"
        android:textColor="@android:color/background_light"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/wushuigongzhi"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toTopOf="@+id/project" />

    <com.tom.waterqualityex.view.NoScrollViewPager
        android:id="@+id/vp_home"
        android:layout_width="0dp"
        android:layout_height="228dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="170dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="170dp"
        android:layout_marginRight="170dp"
        app:layout_constraintHorizontal_bias="0.0"/>

</android.support.constraint.ConstraintLayout>
